feat: support kline date range queries
